# lrn

./: .gitignore  README.md  pyproject.toml
docs/: CURRICULUM.md  LRN_Architecture.md  LRN_Backburner.md  PROGRAMMING_CURRICULUM.md  TEACHER_CURRICULUM.md  curriculum_results.md  developmental_assessment.md  english_sequential_report.md  english_test_report.txt  optimal_training_conditions.md
scripts/: combined_language_logic.py  combined_math_language.py  complex_math.py  eval_phase1.py  eval_phase2.py  eval_phase3.py  experiment_a_epochs.py  experiment_b2.py  experiment_b_combined.py  ground_state_paper.py  logic_lesson1.py  logic_lesson2.py  logic_lesson3.py  logic_lesson4.py  lrn_paper.py  math_word_problems.py  quick_math_test.py  sovereign_data_science_paper.py  teacher_lesson1.py  teacher_lesson10.py  teacher_lesson11.py  teacher_lesson12.py  teacher_lesson13.py  teacher_lesson2.py  teacher_lesson3.py  teacher_lesson4.py  teacher_lesson5.py  teacher_lesson5_fix.py  teacher_lesson6.py  teacher_lesson7.py  teacher_lesson8.py  teacher_lesson9.py  test_generalization.py  test_math.py  test_math_algebraic.py  test_math_full.py  test_math_quick.py  test_math_tension_poly.py  train_augment_phase2.py  train_extended_corpus.py  (+9 more)
sys_test/: advanced_results.json  benchmark_augmented.json  benchmark_improved.json  benchmark_repetition.json  benchmark_results.json  benchmark_targeted.json  complex_math.json  experiment_a_epochs.json  experiment_b2.json  experiment_b_combined.json  generalization_test.json  generation_results.json  language_plus_logic.json  logic_advanced.json  (+21 more)
(+210 files in other folders)
