[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latpy"
version = "0.0.1"
description = "A sovereign-first, deterministic numerical library for Equilibrium Logic and Torsion Physics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ty Arc", email = "ty@tyarc.ai"}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
